needs fixes for tsc / yarn